# robotera_vla_drobotics

./: .gitignore  LICENSE  README.md  inference.Dockerfile  l3_4.urdf  pyproject.toml
data_collection/: ARCHITECTURE.md  README.md
data_collection/docs/: DAQ_INSTRUCTIONS.md  OPERATION_MANUAL.en.md  OPERATION_MANUAL.zh.md
data_collection/examples/: dataset_validator_example.py
data_collection/interfaces/: dataset_schema.md
docs/: HARDWARE_SOFTWARE_REQUIREMENTS.md
inference/: README.md
inference/examples/: config.py  frame_decoder.py  hardware_interface.py  main.py  model_worker.py  stream.py
inference/interfaces/: ros2_api_contract.md
scripts/: compute_norm_stats.py  convert_jax_to_pytorch.py  eval_test_opensourse.py  eval_test_sim.py  train.py  train_multi_node.py
scripts_drobotics/inference_server/: README.md  bc_model_io.txt  compare.py  compare_batch.py  pi05_bcModel_server.py  pi05_jax_server.py  pi05_torch_server.py
scripts_drobotics/oellm_cauchy/: leap_requirements.txt  lerobot_v21_reader.py  lerobot_v3_reader.py  pi05_leapModel_server.py  pi05_leap_model.py  pi05_oellm_convert.py  pi05_oellm_convert_bcGemmaExpert.py  pi05_oellm_convert_bcGemmaLLM.py  requirements.txt
scripts_drobotics/robotrea_python_runtime/: bench_3way.py  bench_3way_compare.py  bench_pycauchykesai_vs_hbmrt.py  bpu_robotrea_pi05model.py  bpu_robotrea_pi05model_ion.py  compare.py  pi05_hbmModel_server.py  pi05_hbmModel_server_ion.py  test_siglip_multicore.py
training/: README.md
training/configs/: config.py  data_config_260322.yml  pi05_finetune.template.yaml
training/interfaces/: training_data_contract.md  transforms.py
training/models/: gemma.py  lora.py  model.py  pi0.py  pi0_config.py  siglip.py  tokenizer.py  vit.py
training/utils/: checkpoints.py  (+3 more)
(+43 files in other folders)
