[project]
name = "robotera_vla"
version = "0.1.0"
description = "Robotera Vision-Language-Action base repository skeleton"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Robotera" }
]
dependencies = [
    "augmax>=0.3.4",
    "dm-tree>=0.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.8",
    "flatbuffers>=24.3.25",
    "flax==0.10.2",
    "fsspec[gcs]>=2024.6.0",
    "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "ml_collections==1.0.0",
    "numpy>=1.22.4,<2.0.0",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "orbax-checkpoint==0.11.13",
    "pillow>=11.0.0",
    "sentencepiece>=0.2.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchcodec==0.4.0",
    "chex==0.1.89",
    "tqdm-loggable>=0.2",
    "typing-extensions>=4.12.2",
    "tyro>=0.9.5",
    "wandb>=0.19.1",
    "filelock>=3.16.1",
    "beartype==0.19.0",
    "treescope>=0.1.7",
    "transformers==4.53.2",
    "rich>=14.0.0",
    "polars>=1.30.0",
    "datasets==3.6.0",
    "pin",
    #"lerobot @ shared/interfaces/lerobot",
    "lerobot @ git+https://github.com/huggingface/lerobot@0cf864870cf29f4738d3ade893e6fd13fbd7cdb5",
    #"dlimp @ git+https://github.com/kvablack/dlimp@ad72ce3a9b414db2185bc0b38461d4101a65477a",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# --- 关键修改：告诉构建工具包含哪些文件夹 ---
[tool.hatch.build.targets.wheel]
packages = [
    "training",
    "data_collection",
    "inference",
    #"shared"
]

[tool.ruff]
line-length = 120
target-version = "py310"